# teensy-marble-machine

./: CMakeLists.txt  README.md  marblemachine.ino
cmake/toolchains/: teensy41.cmake
sdcard-data/: PNO1C2.raw  PNO1C3.raw  PNO1C4.raw  PNO1C5.raw  marbles.mid
